for test generation